// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty view with no tab selected 1`] = `
<div
  className="scene mainScene"
>
  <div
    className="header"
  >
    <button
      className="left"
      onClick={[MockFunction]}
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2>
      
    </h2>
    <button
      className="create"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="content"
    id="main-content"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="load-error"
    >
      <img
        alt=""
        src="grouptabs-logo.svg"
      />
      <h2>
        Grouptabs
      </h2>
      <p>
        Error: Tab data missing. Are you offline? Try refreshing.
      </p>
      <button
        className="create"
        onClick={[Function]}
      >
        Refresh
      </button>
    </div>
  </div>
</div>
`;

exports[`renders missing tab info error 1`] = `
<div
  className="scene mainScene"
>
  <div
    className="header"
  >
    <button
      className="left"
      onClick={[MockFunction]}
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2>
      
    </h2>
    <button
      className="create"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="content"
    id="main-content"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="load-error"
    >
      <img
        alt=""
        src="grouptabs-logo.svg"
      />
      <h2>
        Grouptabs
      </h2>
      <p>
        Error: Tab data missing. Are you offline? Try refreshing.
      </p>
      <button
        className="create"
        onClick={[Function]}
      >
        Refresh
      </button>
    </div>
  </div>
</div>
`;

exports[`renders summary and transaction list 1`] = `
<div
  className="scene mainScene"
>
  <div
    className="header"
  >
    <button
      className="left"
      onClick={[MockFunction]}
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2>
      My Tab
    </h2>
    <button
      className="create"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="content"
    id="main-content"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <ol
        className="summary"
      >
        <li
          style={
            Object {
              "backgroundColor": "rgba(255,68,68,0.975)",
              "color": "var(--color-primary-opposite)",
            }
          }
        >
          <div
            className="amount"
          >
            -12
          </div>
          <div
            className="account"
            style={
              Object {
                "backgroundColor": "rgba(255,68,68,0.975)",
                "color": "var(--color-primary-opposite)",
              }
            }
          >
            Jan
          </div>
        </li>
        <li
          style={
            Object {
              "backgroundColor": "rgba(255,255,255,0)",
              "color": "",
            }
          }
        >
          <div
            className="amount"
          >
            12
          </div>
          <div
            className="account"
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0)",
                "color": "",
              }
            }
          >
            Martin
          </div>
        </li>
      </ol>
    </div>
    <div
      className="row"
    >
      <div
        id="transactions"
      >
        <div>
          <div>
            <div
              className="dategroup"
            >
              9/20/2020
            </div>
            <button
              className="transaction"
              onClick={[Function]}
            >
              <div
                className="transaction-text"
              >
                <div
                  className="title"
                >
                  Gummibärchen
                </div>
                <div
                  className="payments"
                >
                  <em>
                    Martin 22.8 · 
                  </em>
                  Jan 
                </div>
              </div>
              <div
                className="total"
              >
                22.8
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="total-sum"
      >
        Total spending: 
        22.8
      </div>
    </div>
    <div
      className="share-info"
    >
      <p>
        Share this tab ID for collaboration with others:
        <br />
        <code>
          2
        </code>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders tab with no transactions 1`] = `
<div
  className="scene mainScene"
>
  <div
    className="header"
  >
    <button
      className="left"
      onClick={[MockFunction]}
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2>
      My Tab
    </h2>
    <button
      className="create"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="content"
    id="main-content"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="empty-info"
    >
      <p>
        A tab consists of transactions. When you add a transaction you also define the participants.
      </p>
      <p>
        Start by adding your first transaction:
      </p>
      <div
        className="row"
      >
        <button
          className="full-width create"
          onClick={[Function]}
        >
          Add transaction
        </button>
      </div>
    </div>
    <div
      className="share-info"
    >
      <p>
        Share this tab ID for collaboration with others:
        <br />
        <code>
          6
        </code>
      </p>
    </div>
  </div>
</div>
`;
